# rusji

./: Cargo.toml  README.md
rusji-derive/: Cargo.toml
rusji-derive/src/: lib.rs
src/: actions.rs  cli.rs  config.rs  constance.rs  errors.rs  main.rs  screen.rs  startup.rs  theme.rs  utils.rs
src/jira/: constance.rs  global_callbacks.rs  jira.rs  jira_data.rs  jira_views.rs  layouts.rs  mod.rs  request_client.rs  requests_client.rs  screen.rs  tasks.rs  views.rs
src/jira/bottom_menu/: data.rs  helpers.rs  mod.rs  views.rs
src/jira/clients.rs/: mod.rs  requests_client.rs
src/jira/common/: button.rs  buttons_variants.rs  mod.rs  views.rs
src/jira/menu/: data.rs  views.rs
src/jira/projects/: data.rs  mod.rs  views.rs
src/jira/request_client/: mod.rs  request_client.rs  request_models.rs
src/jira/tasks/: data.rs  views.rs
src/jira/tasks_actions/: buttons.rs  change_assignee_views.rs  change_story_points_view.rs  change_transition_view.rs  data.rs  enums.rs  main_view.rs  mod.rs  views.rs
src/jira/utils/: helpers.rs  mod.rs  views.rs
