[package]
name = "universal_task_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "*"
term_size = "*"
clap = { version = "4.0", features = ["derive"] }
home = "*"
serde_json = "1.0.89"
