[package]
name = "rusji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "*"
term_size = "*"
clap = { version = "4.0", features = ["derive"] }
home = "*"
serde_json = "1.0.89"
serde = { version = "*", features = ["derive"] }
serde_with = { version = "1.4.0", features = ["json"]}
cursive = "0.20"
base64 = "0.13.1"
cursive-aligned-view = "0.6.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
url = "2.3.1"
cursive-markup = "0.3.0"
thiserror = "1.0.38"
